--- a/BlogSpace/index.css
+++ b/BlogSpace/index.css
@@ -1,9 +1,23 @@
 body{
     margin: 0;
     padding: 0;
+    font-family: 'Karla', sans-serif;
 }
 
 nav{
     background-color: beige;
     padding: 5px;
+    height: 30px;
+    display: flex;
+    align-items: center;
+    position: fixed;
+    width: 100%;
+}
+
+nav > h3{
+    margin: 0;
+}
+
+#root{
+    padding: 30px 10px 10px;
 }
