--- a/BlogSpace/index.css
+++ b/BlogSpace/index.css
@@ -19,5 +19,24 @@ nav > h3{
 }
 
 #root{
-    padding: 30px 10px 10px;
+    padding: 10px;
+}
+
+form{
+    padding: 60px 10px 10px;
+    display: grid;
+    background-color: lightblue;
+}
+
+form > input, button{
+    max-width: 500px;
+}
+form > textarea {
+    max-width: 500px;
+    height: 100px;
+}
+
+button{
+    font-size: 18px;
+    cursor: pointer;
 }
